use pointSizeF

BUG:296117
FIXED-IN:4.9